# bevy-scene-hook

./: Cargo.toml  Makefile  Readme.md  rustfmt.toml
assets/: box.gltf  sample-scene.gltf
examples/: simple.rs  simple_scene.rs
src/: hook.rs  lib.rs  reload.rs  world.rs
