[package]
name = "bevy-scene-hook"
authors = ["Nicola Papale"]
description = "Ad-hoc component insertion for bevy scenes"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["bevy"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-scene-hook"
version = "5.1.1"
edition = "2021"

[dependencies]
bevy = { version = "0.9", default-features = false, features = [ "bevy_scene" ] }

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = [ "bevy_scene", "bevy_asset" ] }
