[package]
name = "bevy-scene-hook"
authors = ["Nicola Papale"]
description = "Ad-hoc component insertion for bevy scenes"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["bevy"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-scene-hook"
version = "8.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [ "bevy_scene", "bevy_asset" ] }

[dev-dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_scene",
    "bevy_asset",
    "bevy_gltf",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "tonemapping_luts"
]
