[package]
name = "bevy-scene-hook"
authors = ["Nicola Papale"]
description = "Ad-hoc component insertion for bevy scenes"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["bevy"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-scene-hook"
version = "9.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [ "bevy_scene", "bevy_asset" ] }

[dev-dependencies]
bevy = { version = "0.13", default-features = true }

[package.metadata.release]
pre-release-replacements = [
  {search="\\| 0.13 \\| [0-9.]* \\|",replace="| 0.13 | {{version}} |",file="Readme.md"},
  {search="bevy-scene-hook = \"[0-9.]*\"",replace="bevy-scene-hook = \"{{version}}\"",file="Readme.md"},
]
